Heading z-index Fix
>Fixed bug where heading wasn't always on top by setting it's z-index to 999

--- a/styles.css
+++ b/styles.css
@@ -18,6 +18,7 @@ p{
 .heading-bar{
     margin:0px;
     top:0;
+    z-index:999;
     height:120px;
     background-image:linear-gradient(red, maroon);
     display:flex;
